@@ -1,3 +1,11 @@
+2017-02-19  Eric Fiselier  <eric@efcs.ca>
+	    Jonathan Wakely  <jwakely@redhat.com>
+
+	PR c++/69523
+	* parser.c (cp_parser_unqualified_id): Use OPT_Wliteral_suffix to
+	control warning about literal suffix identifiers without a leading
+	underscore.
+
 2017-02-17  Jason Merrill  <jason@redhat.com>
 
 	PR c++/79508 - lookup error with member template
