@@ -1,3 +1,9 @@
+2017-02-19  Eric Fiselier  <eric@efcs.ca>
+	    Jonathan Wakely  <jwakely@redhat.com>
+
+	PR c++/69523
+	* g++.dg/cpp0x/Wliteral-suffix2.C: New test.
+
 2017-02-19  Prathamesh Kulkarni  <prathamesh.kulkarni@linaro.org>
 
 	* gcc.dg/gimplefe-26.c: New test.
